Add includes, cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,6 @@ if(NOT MSVC)
 	set_project_warnings(project_warnings)
 endif()
 
-set(THREADS_PREFER_PTHREAD_FLAG OFF)
-find_package(Threads)
-
 if (NOT raylib_FOUND)
   include(FetchContent)
   FetchContent_Declare(
@@ -51,18 +48,19 @@ if (NOT asio_FOUND)
 endif()
 add_library(asio INTERFACE)
 target_include_directories(asio SYSTEM INTERFACE ${asio_SOURCE_DIR}/asio/include)
+find_package(Threads)
 target_link_libraries(asio INTERFACE Threads::Threads)
 
 # This is the main part:
 file(GLOB PROJECT_SOURCES
-	src/main.cpp
-	src/board/*
-	src/game/*
+	src/*.cpp
 )
 add_executable(${PROJECT_NAME}_client ${PROJECT_SOURCES})
 target_compile_definitions(${PROJECT_NAME}_client PRIVATE CLIENT)
+target_include_directories(${PROJECT_NAME}_client PRIVATE ${raylib_SOURCE_DIR}/src)
 target_link_libraries(${PROJECT_NAME}_client PRIVATE project_options project_warnings raylib asio)
 
 add_executable(${PROJECT_NAME}_server src/main.cpp)
 target_compile_definitions(${PROJECT_NAME}_server PRIVATE SERVER)
+target_include_directories(${PROJECT_NAME}_server PRIVATE ${raylib_SOURCE_DIR}/src)
 target_link_libraries(${PROJECT_NAME}_server PRIVATE project_options project_warnings asio)
