--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ endif()
 # This is the main part:
 file(GLOB PROJECT_SOURCES
 	src/main.cpp
-	src/windows/main_window.cpp
+	src/main_window/main_window.cpp
 )
 add_executable(${PROJECT_NAME}_client ${PROJECT_SOURCES})
 target_compile_definitions(${PROJECT_NAME}_client PRIVATE CLIENT)
